--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,5 @@
+/* ESTILO PARA LA VERSION MOVIL */
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
@@ -50,7 +52,7 @@ header a {
     text-decoration: none;
     color: white;
     padding: 10px;
-    background-color: rgb(78, 76, 76);
+    background-color: rgb(53, 51, 51);
     border: 2px solid gray;
     text-align: center;
 }
@@ -62,6 +64,7 @@ header a:hover {
 main {
     background-color: white;
     width: 90vw;
+    max-width: 700px;
     margin: auto;
     padding: 10px;
     margin-top: 10px;
