--- a/estilos/style.css
+++ b/estilos/style.css
@@ -55,6 +55,7 @@ header a {
     background-color: rgb(53, 51, 51);
     border: 2px solid gray;
     text-align: center;
+    border-radius: 10px;
 }
 
 header a:hover {
